--- a/assets/minecraft/lang/en_LD.lang
+++ b/assets/minecraft/lang/en_LD.lang
@@ -295,6 +295,85 @@ book.editTitle=Enter Book Title:
 book.finalizeButton=Sign and Close
 book.finalizeWarning=Note! When you sign the book, it will no longer be editable.
 
+item.beetroot_seeds.name=BEE+ Extractor
+item.beetroot_soup.name= Pill soup
+item.chorusFruit.name=Condensed chaos pod
+item.chorusFruitPopped.name= Stable chaos pod
+tile.chorusFlower.name=C.H.R.U.-5
+tile.chorusPlant.name=Condensed chaos trail
+tile.beetroots.name=BEE+
+item.beetroot.name=BEE+ pills
+tile.stone.andesite.name=damaged ventilation duct
+tile.stone.andesiteSmooth.name=hidden ventilation duct
+tile.stone.diorite.name=damaged cable bundle block
+tile.stone.dioriteSmooth.name=sealed cable bundle block
+tile.stone.granite.name=flaky rebar concrete block
+tile.stone.graniteSmooth.name=uncovered rebar concrete block
+tile.wood.acacia.name=Layered metal block
+tile.sapling.acacia.name= Hi-radar In The Box
+tile.stairsWoodAcacia.name=layerd metal steps
+tile.woodSlab.acacia.name= Layered metal slab
+item.doorAcacia.name= panel door
+tile.acaciaFence.name= Layered metal fence
+tile.acaciaFenceGate.name= layered mtal gate
+tile.leaves.acacia.name= Radar receptors
+tile.log.acacia.name= Radar base
+tile.log.big_oak.name= Dense Scrap stilt
+tile.sapling.big_oak.name= Dense Shack in the box
+tile.wood.big_oak.name=weathered corrugated metal block
+tile.woodSlab.big_oak.name= weathered corrugated slab that is made of metal
+tile.leaves.big_oak.name= Dense scrap shack metals
+item.doorDarkOak.name= sturdy door
+tile.darkOakFence.name=weatherd scrap fence
+tile.darkOakFenceGate.name=weathered scrap gate
+tile.stairsWoodDarkOak.name=weathered metal steps
+item.doorBirch.name= scrap plank door
+item.doorJungle.name=checkered metal door
+item.doorSpruce.name= heavy wooden door
+item.doorOak.name=scrap door
+tile.sponge.dry.name= Dry water absorbtion unit
+tile.sponge.wet.name= Leaking water absorbtion unit
+tile.prismarine.rough.name=Rusty metal plating
+tile.prismarine.dark.name= Algae covered metal plating
+tile.prismarine.bricks.name=Stained underwater plating
+tile.endBricks.name=E.N.D. facility bricks
+tile.tallgrass.fern.name=withered brambles
+tile.doublePlant.fern.name=tall brambles
+tile.doublePlant.grass.name=high dead grass
+tile.doublePlant.syringa.name= broken tapes
+tile.doublePlant.rose.name=withered ornamental plant
+tile.doublePlant.paeonia.name=strange withered plant
+tile.flower1.dandelion.name= Irradiated bush
+tile.flower2.poppy.name=wilted red flower
+tile.flower1.name=:ERROR:
+tile.flower2.allium.name=withered shrub
+tile.flower2.blueOrchid.name=swamp flower
+tile.flower2.houstonia.name=broken home wind generator
+tile.flower2.name=:ERROR:
+tile.flower2.oxeyeDaisy.name=home wind generator
+tile.flower2.tulipOrange.name=suspicious pile
+tile.flower2.tulipPink.name=mutated seed pods
+tile.flower2.tulipRed.name=Soviet marker
+tile.flower2.tulipWhite.name= pile of asses
+tile.anvil.intact.name=R&M station
+tile.anvil.slightlyDamaged.name=Low-on-power R&M staion
+tile.anvil.veryDamaged.name=Depleted R&M station
+tile.anvil.name=HEAVY METAL
+tile.endRod.name= He3 lighting rod
+entity.generic.name=WTF IS THAT
+item.end_crystal.name=Mysterious power beacon
+tile.birchFenceGate.name=Riveted wood gate
+tile.jungleFenceGate.name=checkered metal gate
+item.fish.salmon.raw.name=Raw wierd fish
+item.fish.salmon.cooked.name=Wierd fillet
+item.rabbitHide.name=Synthetic leather scrap
+item.prismarineCrystals.name=Mechanical fragments
+item.prismarineShard.name=Submarine parts
+item.shield.name=Scrap shield
+entity.Rabbit.name=Cyborg rabbit
+item.rabbitFoot.name=Cyborg jump amplificator
+
+
 tile.stone.name=Metal Plating
 tile.hayBlock.name=Water Crate
 tile.grass.name=Dead Grass Block
@@ -385,7 +464,7 @@ tile.doorWood.name=Metal Sheet Door
 tile.ladder.name=Unstable Ladder
 tile.rail.name=Track
 tile.goldenRail.name=Booster Track
-tile.activatorRail.name=Activator Trail
+tile.activatorRail.name=Activator rail
 tile.detectorRail.name=Detector Track
 tile.stairsStone.name=Metal Plating Track
 tile.stairsSandStone.name=Concrete Stairs
@@ -418,7 +497,7 @@ tile.ice.name=Ice
 tile.cactus.name=Radioactive Barrel
 tile.clay.name=Fine Dust Block
 tile.clayHardenedStained.black.name=Broken Flood Light
-tile.clayHardenedStained.red.name=Red Dial Phone
+tile.clayHardenedStained.red.name=crumbled scrap
 tile.clayHardenedStained.green.name=Multiple Displays
 tile.clayHardenedStained.brown.name=Wooden Crate
 tile.clayHardenedStained.blue.name=CLONO Apparatus
@@ -431,7 +510,7 @@ tile.clayHardenedStained.lime.name=Radar
 tile.clayHardenedStained.yellow.name=Chemical Storage Cabinet
 tile.clayHardenedStained.lightBlue.name=Geiger Counter
 tile.clayHardenedStained.magenta.name=Clock
-tile.clayHardenedStained.orange.name=Tape Recorder
+tile.clayHardenedStained.orange.name=Crumbled scrap
 tile.clayHardenedStained.white.name=Kitchen Tile
 tile.clayHardened.name=Broken Machine
 tile.reeds.name=Sugar cane
@@ -685,7 +764,7 @@ item.speckledMelon.name=Glistering Melon Liquor
 item.monsterPlacer.name=Create
 item.expBottle.name=Experience Tape
 item.fireball.name=Huggatron Charge
-item.writingBook.name=Book and Ballpoint Pen
+item.writingBook.name=Book and  BallpOInt Pen
 item.writtenBook.name=Written Book
 item.ruby.name=Ruby
 item.flowerPot.name=Flower Pot
