--- a/assets/minecraft/lang/en_LD.lang
+++ b/assets/minecraft/lang/en_LD.lang
@@ -10,7 +10,7 @@ gui.no=:(Deny):
 menu.singleplayer=:(Play.Singleplayer):
 menu.multiplayer=:(Play.Multiplayer):
 menu.online=:(Multi.Realm):
-menu.options=:(Edit.Settings.):
+menu.options=:(Edit.Settings):
 menu.quit=:(End.Program):
 menu.returnToMenu=:(Save.Return.to.Title):
 menu.disconnect=:(Disconnect):
@@ -20,8 +20,8 @@ menu.generatingLevel=:(Generating.World):
 menu.loadingLevel=:(Loading.World):
 menu.generatingTerrain=:(Building.Terrain):
 menu.convertingLevel=:(Converting.World):
-menu.simulating=:(Simulating.World.Please.Wait.):
-menu.respawning=:(Rebuilding.Character.):
+menu.simulating=:(Simulating.World.Please.Wait):
+menu.respawning=:(Rebuilding.Character):
 menu.shareToLan=:(Open.to.LAN):
 
 selectWorld.title=:(Select.World):
@@ -72,7 +72,7 @@ gameMode.changed=:(Gamemode.Updated):
 selectWorld.gameMode=Game Mode:
 selectWorld.gameMode.survival=:(Survival):
 selectWorld.gameMode.survival.line1=Search for resources, crafting, gain
-selectWorld.gameMode.survival.line2=levels, health and hunger
+selectWorld.gameMode.survival.line2=levels, health and radiation
 selectWorld.gameMode.creative=:(Creative):
 selectWorld.gameMode.creative.line1=Unlimited resources, free flying and
 selectWorld.gameMode.creative.line2=destroy blocks instantly
@@ -82,7 +82,7 @@ selectWorld.gameMode.hardcore.line2=difficulty, and one life only
 selectWorld.gameMode.adventure=:(Adventure):
 selectWorld.gameMode.adventure.line1=Same as survival mode, but blocks can't
 selectWorld.gameMode.adventure.line2=be added or removed
-selectWorld.moreWorldOptions=:(More.World.Options.):
+selectWorld.moreWorldOptions=:(More.World.Options):
 selectWorld.mapFeatures=:(Generate.Structures):
 selectWorld.mapFeatures.info=Villages, dungeons etc
 selectWorld.mapType=World Type:
@@ -116,7 +116,7 @@ addServer.enterIp=:(Server.Address):
 addServer.add=:(Confirm.Changes):
 addServer.hideAddress=:(Hide.Address):
 lanServer.title=:(LAN.World):)
-lanServer.scanning=:(Scanning.for.LAN.Connections.):
+lanServer.scanning=:(Scanning.for.LAN.Connections):
 lanServer.start=:(Initiate.LAN.World):
 lanServer.otherPlayers=:(Settings.for.other.Players):
 mcoServer.title=:(Minecraft.Online.World):
@@ -140,17 +140,17 @@ chat.link.warning=Never open links from people that you don't trust!
 chat.link.open=Open in browser
 chat.copy=Copy to Clipboard
 
-menu.playdemo=Play Demo World
-menu.resetdemo=Reset Demo World
-demo.day.1=This demo will last five game days, do your best!
-demo.day.2=Day Two
-demo.day.3=Day Three
-demo.day.4=Day Four
-demo.day.5=This is your last day!
-demo.day.warning=Your time is almost up!
-demo.day.6=You have passed your fifth day, use F2 to save a screenshot of your creation
-demo.reminder=The demo time has expired, buy the game to continue or start a new world!
-demo.remainingTime=Remaining time: %s
+menu.playdemo=:(Play.Demo.World)
+menu.resetdemo=(Reset.Demo.World)
+demo.day.1=[This demo will last five game days, do your best!]
+demo.day.2=[Day Two]
+demo.day.3=[Day Three]
+demo.day.4=[Day Four]
+demo.day.5=[This is your last day!]
+demo.day.warning=[Your time is almost up!]
+demo.day.6=[You have passed your fifth day, use F2 to save a screenshot of your creation]
+demo.reminder=[The demo time has expired, buy the game to continue or start a new world!]
+demo.remainingTime=:(Time.Remaining: %s):
 demo.demoExpired=Demo time's up!
 demo.help.movement=Use %1$s, %2$s, %3$s, %4$s and the mouse to move around
 demo.help.movementShort=Move by pressing %1$s, %2$s, %3$s, %4$s
@@ -183,12 +183,12 @@ options.off=OFF
 options.on=ON
 options.visible=Shown
 options.hidden=Hidden
-options.title=:(Settings.):
+options.title=:(Settings):
 options.controls=:(Controls):
-options.video=:(Video.Settings.):
+options.video=:(Video.Settings):
 options.language=:(Language):
 options.languageWarning=Languages.may.not.be.100%.Accurate
-options.videoTitle=:(Video.Settings.):
+options.videoTitle=:(Video.Settings):
 options.music=:(Music)
 options.sound=:(Sound)
 options.invertMouse=:(Invert.Mouse)
@@ -235,8 +235,8 @@ options.particles=:(Particles)
 options.particles.all=:(All):
 options.particles.decreased=:(Decreased):
 options.particles.minimal=:(Minimal):
-options.multiplayer.title=:(Multiplayer.Settings.):
-options.chat.title=:(Chat.Settings.):
+options.multiplayer.title=:(Multiplayer.Settings):
+options.chat.title=:(Chat.Settings):
 options.chat.visibility=:(Chat)
 options.chat.visibility.full=:(Shown):
 options.chat.visibility.system=:(Console.Commands.Only):
@@ -252,7 +252,7 @@ options.chat.height.unfocused=:(Unfocused.Height)
 options.showCape=:(Show.Cape)
 options.serverTextures=:(Server.Textures)
 options.snooper=:(Allow.Snooper):
-options.snooper.view=:(Snooper.Settings.):
+options.snooper.view=:(Snooper.Settings):
 options.snooper.title=:(Machine.Specs.Collection):
 options.snooper.desc=We want to collect information about your machine to help improve Minecraft by knowing what we can support and where the biggest problems are. All of this information is completely anonymous and viewable below. We promise we won't do anything bad with this data, but if you want to opt out then feel free to toggle it off!
 options.texture.pack=:(Texture.Packs):
