--- a/assets/minecraft/lang/en_LD.lang
+++ b/assets/minecraft/lang/en_LD.lang
@@ -841,11 +841,11 @@ item.ingotGold.name=Rare Metals
 item.swordIron.name=K.O. Sledge Hammer
 item.swordWood.name=Scrap Plank Bat
 item.shovelWood.name=Cricket Bat
-item.pickaxeWood.name=Pointy Stick
+item.pickaxeWood.name=Makeshift Pick
 item.hatchetWood.name=Makeshift Axe
 item.swordStone.name=Lead Pipe
 item.shovelStone.name=Metal Spade
-item.pickaxeStone.name=Pointy Metal Stick
+item.pickaxeStone.name=Pick
 item.hatchetStone.name=Axe
 item.swordDiamond.name=Cattle Prod
 item.shovelDiamond.name=MOON Soil Entrencher
@@ -1092,84 +1092,88 @@ container.isLocked=:(%s.locked):
 item.dyed=:(Colored):
 item.unbreakable=:(Unbreakable):
 item.canBreak=Can.destroy:
-item.canPlace=Can.placed.on:
+item.canPlace=Can.place.on:
 
 entity.Item.name=Item
-entity.XPOrb.name=Experience Orb
+entity.xp_orb.name=Experience Orb
 entity.small_fireball.name=Small Fireball
-entity.Fireball.name=Fireball
+entity.fireball.name=Fireball
 entity.potion.name=Potion
 
-entity.Arrow.name=Firearm Projectile
-entity.Snowball.name=Snowball
-entity.Painting.name=Poster
+entity.arrow.name=Firearm Projectile
+entity.snowball.name=Snowball
+entity.painting.name=Poster
 entity.armor_stand.name=Armor Rack
 
 entity.Mob.name=Creature
 entity.Monster.name=Enemy
 
-entity.Creeper.name=Huggatron
-entity.Skeleton.name=Bandit
-entity.Spider.name=Hall Monitor
-entity.Giant.name=Giant
-entity.Zombie.name=Lost
-entity.Slime.name=Mega Amoeba
-entity.Ghast.name=SecurAll
-entity.PigZombie.name=Scientist 
-entity.Enderman.name=Experiment
-entity.Endermite.name=Madness Mite
-entity.Silverfish.name=Rust Roach
+entity.creeper.name=Huggatron
+entity.skeleton.name=Bandit
+entity.spider.name=Hall Monitor
+entity.giant.name=Giant
+entity.zombie.name=Lost
+entity.slime.name=Mega Amoeba
+entity.ghast.name=SecurAll
+entity.zombie_pigman.name=Scientist 
+entity.enderman.name=Experiment
+entity.endermite.name=Madness Mite
+entity.silverfish.name=Rust Roach
 entity.cave_spider.name=B-Class Hall Monitor
-entity.Blaze.name=He-3 Excavator
+entity.blaze.name=He-3 Excavator
 entity.magma_cube.name=P.W.C.
 entity.mooshroom.name=Funga Stoneback
-entity.Villager.name=Masked
-entity.VillagerGolem.name=Guardian
-entity.SnowMan.name=SKUL
+entity.villager.name=Masked
+entity.villager_golem.name=Guardian
+entity.snowman.name=SKUL
 entity.ender_dragon.name=Mad Dragon
-entity.WitherBoss.name=GROT
-entity.Witch.name=Masked Outcast
-entity.Guardian.name=SUBmarine Vessel
+entity.wither.name=GROT
+entity.wither_skull.name=GROT projectile
+entity.witch.name=Masked Outcast
+entity.guardian.name=SUBmarine Vessel
+entity.elder_guardian.name=Advanced SUBmarine Vessel
 
-entity.Villager.farmer=Farmer
-entity.Villager.fisherman=Fisherman
-entity.Villager.shepherd=Shepherd
-entity.Villager.fletcher=Firearm Servicer
-entity.Villager.librarian=Bookkeeper
-entity.Villager.cleric=Prophet
-entity.Villager.armor=Armor Trader
-entity.Villager.weapon=Weaponry Trader
-entity.Villager.tool=Equipment Trader
-entity.Villager.butcher=Butcher
-entity.Villager.leather=Stoneback Crafter
+entity.villager.farmer=Farmer
+entity.villager.fisherman=Fisherman
+entity.villager.shepherd=Shepherd
+entity.villager.fletcher=Firearm Servicer
+entity.villager.librarian=Bookkeeper
+entity.villager.cleric=Prophet
+entity.villager.armor=Armor Trader
+entity.villager.weapon=Weapon Trader
+entity.villager.tool=Equipment Trader
+entity.villager.butcher=Butcher
+entity.villager.leather=Stoneback Crafter
+entity.villager.nitwit=TODO
+entity.villager.cartographer=TODO
 
-entity.Pig.name=Giant Rat
-entity.Sheep.name=AWR
-entity.Cow.name=Stoneback
-entity.Chicken.name=Mobile Munitions Machine
-entity.Squid.name=Temperature Monitor
-entity.Wolf.name=Lab Dog
+
+entity.pig.name=Giant Rat
+entity.sheep.name=AWR
+entity.cow.name=Stoneback
+entity.chicken.name=Mobile Munitions Machine
+entity.squid.name=Temperature Monitor
+entity.wolf.name=Lab Dog
 entity.ocelot.name=Cat
-entity.Cat.name=Tame Cat
-entity.Bat.name=SP Eye
-entity.horse.name=HORS
+entity.cat.name=Tame Cat
+entity.bat.name=SP Eye
 entity.horse.name=HORS
 entity.donkey.name=HORS V2
 entity.mule.name=Modified HORS
-entity.skeletonhorse.name=Malfunctioning HORS
-entity.zombiehorse.name=Irradiated HORS
-entity.Rabbit.name=Leaper
+entity.skeleton_horse.name=Malfunctioning HORS
+entity.zombie_horse.name=Irradiated HORS
+entity.rabbit.name=Leaper
 entity.KillerBunny.name=Irradiated Leaper
 
 entity:shulker.name=TODO
 entity:shilker_bullet.name=TODO
-entity.PrimedTnt.name=Block of TNT
+entity.tnt.name=Block of TNT
 entity.falling_block.name=Falling Block
 
-entity.Minecart.name=Transportation Cart
-entity.Boat.name=Boat
+entity.minecart.name=Transportation Cart
+entity.boat.name=Boat
 
-entity.generic.name=unknown
+entity.generic.name=:ERROR:
 
 death.fell.accident.ladder=%1$s fell off an unstable ladder
 death.fell.accident.vines=%1$s fell off some ironbarb vines
@@ -1446,7 +1450,7 @@ achievement.mineWood.desc=Attack a shack until a scrap shack stilt pops out
 achievement.buildWorkBench=Working
 achievement.buildWorkBench.desc=Craft a workbench with four corrugated metal sheets
 achievement.buildPickaxe=Time to Scavenge!
-achievement.buildPickaxe.desc=Use corrugated metal sheets and sticks to make a pointy stick
+achievement.buildPickaxe.desc=Use corrugated metal sheets and sticks to make a makeshift pickaxe
 achievement.buildFurnace=Hot Stuff
 achievement.buildFurnace.desc=Construct an electric oven out of eight metal plates
 achievement.acquireIron=The Mechanic
@@ -1457,8 +1461,8 @@ achievement.makeBread=I Need A Drink
 achievement.makeBread.desc=Make a canteen using clean water doses
 achievement.bakeCake=The Kit
 achievement.bakeCake.desc=Clean Water Doses, Sugar, Stoneback Milk and 3M Construction Kits!
-achievement.buildBetterPickaxe=Superstick
-achievement.buildBetterPickaxe.desc=Construct a better stick
+achievement.buildBetterPickaxe=Superpick
+achievement.buildBetterPickaxe.desc=Construct a better pick
 achievement.overpowered=Golden Tin
 achievement.overpowered.desc=Build a Notch apple
 achievement.cookFish=Not-so-delicious Fish
